--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@splidejs/vue-splide": "^0.6.12",
     "@tailwindcss/vite": "^4.1.11",
+    "chart.js": "^4.5.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.8",
     "nuxt": "^4.0.1",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2",
     "vue-responsive-video-background-player": "^2.4.1",
     "vue-router": "^4.5.1"
   },
